--- a/popup.html
+++ b/popup.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <title>Oof!</title>
-	<script src="popup.js"></script>
-	<link rel="stylesheet" type="text/css" href="style.css">
+    <script src="popup.js" defer></script>
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
-	<input type='button' class="button" id='btnToggle'	value='Oof: ON'>
+    <input type="button" class="button" id="btnToggle" value="Oof: ON">
   </body>
 </html>
